tests/positive/VisibilityPrecendence/VisibilityPrecedence.juvix
module VisibilityPrecedence;

import NestedLocalModuleViaExport as M;

main : M.T := M.A.t;
